--- a/contact.html
+++ b/contact.html
@@ -112,37 +112,37 @@
             <div class="grid_6">
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>RAIN REHV <br> Vastutav väljaandja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 111 <br> <i class="fas fa-envelope"></i> rain.rehv@pedalfaster.com</div>
+                    <div>RAIN REHV <br> Vastutav väljaandja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 111 <br> <i class="fas fa-envelope"></i> <a href="mailto:rain.rehv@pedalfaster.com.com">rain.rehv@pedalfaster.com</a></div>
                 </p>
                 <p><br></p>
                 <p><br></p>
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>AIRE KORV <br> Disainer <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 112 <br> <i class="fas fa-envelope"></i> aire.korv@pedalfaster.com</div>
+                    <div>AIRE KORV <br> Disainer <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 112 <br> <i class="fas fa-envelope"></i> <a href="aire.korv@pedalfaster.com">aire.korv@pedalfaster.com</a></div>
                 </p>
                 <p><br></p>
                 <p><br></p>
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>MAREK KIIRE <br> Projektijuht <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 113 <br> <i class="fas fa-envelope"></i> marek.kiire@pedalfaster.com</div>
+                    <div>MAREK KIIRE <br> Projektijuht <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 113 <br> <i class="fas fa-envelope"></i> <a href="marek.kiire@pedalfaster.com.com">marek.kiire@pedalfaster.com</a></div>
                 </p>
             </div>
             <div class="grid_6">
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>ALAR RATAS <br> Toimetaja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 114 <br> <i class="fas fa-envelope"></i> alar.ratas@pedalfaster.com</div>
+                    <div>ALAR RATAS <br> Toimetaja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 114 <br> <i class="fas fa-envelope"></i> <a href="alar.ratas@pedalfaster.com.com">alar.ratas@pedalfaster.com</a></div>
                 </p>
                 <p><br></p>
                 <p><br></p>
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>PIRET PEDAAL <br> Keeletoimetaja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 115 <br> <i class="fas fa-envelope"></i> piret.pedaal@pedalfaster.com</div>
+                    <div>PIRET PEDAAL <br> Keeletoimetaja <br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 115 <br> <i class="fas fa-envelope"></i> <a href="piret.pedaal@pedalfaster.com">piret.pedaal@pedalfaster.com</a></div>
                 </p>
                 <p><br></p>
                 <p><br></p>
                 <p>
                  <img src="images/pilt.png" alt="" align="left" style="border-radius: 50%;">
-                    <div>KLIENDITEENINDUS <br> Rataskaevu 39/1, 19094 Tallinn <br><a href="kaart.html">Asukohakaart</a><br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 110 <br> <i class="fas fa-envelope"></i> info@pedalfaster.com</div>
+                    <div>KLIENDITEENINDUS <br> Rataskaevu 39/1, 19094 Tallinn <br><a href="kaart.html">Asukohakaart</a><br><br><br> <i class="fas fa-phone-alt"></i> Tel: 111 110 <br> <i class="fas fa-envelope"></i> <a href="info@pedalfaster.com">info@pedalfaster.com</a></div>
                 </p>
             </div>
         </div>
